# nestedIfCombine

./: CMakeLists.txt  LLVMBuild.txt  NestedIfCombine.cpp  NestedIfCombine.h  optimized.ll
llvm-build/: main.c  main.ll  optimized.ll  test.ll
